@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-11T08:17:02Z",
+  "timestamp" : "2022-05-12T01:01:33Z",
   "count_outdated" : 264,
   "uniques_outdated" : 130,
-  "count" : 294,
+  "count" : 295,
   "uniques" : 153,
   "clones" : [
     {
@@ -63,8 +63,8 @@
     },
     {
       "timestamp": "2022-05-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
