@@ -1,5 +1,5 @@
 {
-  "count": 30,
+  "count": 31,
   "uniques": 14,
   "clones": [
     {
@@ -44,7 +44,7 @@
     },
     {
       "timestamp": "2022-05-11T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
